@@ -1,6 +1,6 @@
 /******************************************************************************
  *
- *  $Id$
+ *  $Id: sync.h,v a864688e7de5 2009/07/27 10:48:52 fp $
  *
  *  Copyright (C) 2006-2008  Florian Pose, Ingenieurgemeinschaft IgH
  *
@@ -59,7 +59,7 @@ void ec_sync_init(ec_sync_t *, ec_slave_t *);
 void ec_sync_init_copy(ec_sync_t *, const ec_sync_t *);
 void ec_sync_clear(ec_sync_t *);
 void ec_sync_page(const ec_sync_t *, uint8_t, uint16_t,
-        const ec_sync_config_t *, uint8_t *);
+        const ec_sync_config_t *, uint8_t, uint8_t *);
 int ec_sync_add_pdo(ec_sync_t *, const ec_pdo_t *);
 ec_direction_t ec_sync_default_direction(const ec_sync_t *);
 
